# book-karaoke

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
input/: sample.txt
src/: align.py  config.py  export.py  export_html.py  pipeline.py  render.py  server.py  transcribe.py  tts.py  utils.py
static/: index.html
static/css/: styles.css
static/js/: app.js  export.js  player.js  renderer.js  settings.js  teleprompter.js  upload.js
